# process-street-api

./: Dockerfile  process-street.http  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: build.yaml
ci/: gen.py
src/process_street/: __init__.py
tests/: test_client.py
tools/: list-workflow-form-fields.py  list-workflow-tasks.py  list-workflows.py  parse-group-json.py
