[project]
name = "process-street"
version = "2025.0"
description = "Work with the Process Street API"
readme = "README.md"
authors = [
    { name = "William Jackson", email = "william@subtlecoolness.com" }
]
requires-python = ">=3.13"
license = "MIT"
dependencies = [
    "httpx>=0.28.1",
]

[project.urls]
"Homepage" = "https://github.com/informatica-na-presales-ops/process-street-api"
"Issues" = "https://github.com/informatica-na-presales-ops/process-street-api/issues"

[build-system]
requires = ["uv-build>=0.9.15,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "coverage>=7.12.0",
    "dotenv>=0.9.9",
    "ruff>=0.14.7",
    "uv-build>=0.9.15",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
